[tool.poetry]
name = "ddb_scale"
version = "0.1.0"
description = "Scale RCU/WCU of DynamoDB tables"
authors = ["Akshay <nerdy@peppe.rs>"]
packages = [
        { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.10"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ddb_scale = "src.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
